--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="_css/estilo.css">
 </head>
 <body>
     <div class="container"> <!--Este primeiro container, serve para englobar apenas o header do site, que contem o menu de navegação para os elementos internos-->
@@ -14,7 +14,7 @@
                 <header id="cabecalho"> <!-- Este header contem o cabeçalho de navegação entre as divisões do site, nada de links externos! Apenas internos do próprio site-->
                     <nav>
                         <ul>
-                            <a href="#inicio"><li>Início</li></a>
+                            <a href="index.html"><li>Início</li></a>
                             <a href="#contato"><li>Contato</li></a>
                             <a href="#sobre"><li>Sobre</li></a>
                             <a href="#bio"><li>Bio</li></a>
@@ -29,7 +29,7 @@
             <!--#############################################################################################-->
             <div class="row"> <!--Seção inicial do site, onde vai conter a imagem de apresentação do site!-->
                 <div class="col">
-                    <section id="inicio">
+                    <section id="template">
                         <h1>Bem vindo, este é o Início do site</h1>
 
                     </section>
