--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Curriculo pessoal, Portfolio pessoal, Web developer">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Antônio Alberto Correa Junior">
-    <title>@antonio</title>
+    <title>@antonio - O curriculo on-line que você verá e não irá esquecer tão cedo!</title>
     <link rel="stylesheet" href="_css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,700&display=swap" rel="stylesheet">
@@ -40,6 +40,9 @@
                     </div>
                 </div>
             </div>
+
+
+
             <div class="midias-sociais">
                 <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
