--- a/index.html
+++ b/index.html
@@ -9,20 +9,36 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Antônio Alberto Correa Junior">
     <title>@antonio - O curriculo on-line que você verá e não irá esquecer tão cedo!</title>
-    <link rel="stylesheet" href="_css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Roboto:400,900&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Pacote de icones em fontes-->
     <link rel="icon" href="_images/icon.png"><!--<div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
+    <link rel="stylesheet" href="_css/style.css">
 </head>
     <body>
+        <section class="hero__section">
+            <h1>Welcome to my web-site</h1>
+            <h2>Escrevendo códigos e formando aprendizados</h2>
+            <a class="btn" href="">Saiba mais</a>
+
+            <div class="midias-sociais">
+                <ul>
+                    <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
+                    <li><a href="https://www.instagram.com/antonioal97/?hl=pt-br" target="_blank" rel="rel=noopener"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/ant%C3%B4nio-alberto-aa8501185/" target="_blank" rel="rel=noopener"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/antonioal97" target="_blank" rel="rel=noopener"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://web.whatsapp.com/" target="_blank" rel="rel=noopener"><i class="fa fa-whatsapp"></i></a></li>
+                </ul>
+            </div>
+        </section>
         <div class="container">
-            <header class="cabecalho"> <!--Cabeçalho superior que contem os menus de navegação do site-->
-                <img src="_images/avatar-site.svg" alt="minha-foto">
-                <nav><!--Menu de navegação da página!-->
+            <header class="cabecalho__header"> <!--Cabeçalho superior que contem os menus de navegação do site-->
+                <a href="index.html"><img class="cabecalho__img-user" src="/_images/avatar-site.svg" alt="Antônio Alberto - Jovem estudante, desenvolvedor e criador de ideias!"></img></a>
+                <nav class="cabecalho__main-menu">
                     <ul> <!--Lista de navegação entre páginas do site-->
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="#">Contato</a></li>
                         <li><a href="#">Sobre</a></li>
+                        <li><a href="#">Blog</a></li>
                     </ul><!--Fim da lista de navegação entre páginas do site-->
                 </nav><!--Fim do menu de navegação da página!-->
             </header><!--Fim do cabeçalho superior que contem os menus de navegação do site-->
@@ -43,15 +59,11 @@
 
 
 
-            <div class="midias-sociais">
-                <ul>
-                    <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
-                    <li><a href="https://www.instagram.com/antonioal97/?hl=pt-br" target="_blank" rel="rel=noopener"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/ant%C3%B4nio-alberto-aa8501185/" target="_blank" rel="rel=noopener"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/antonioal97" target="_blank" rel="rel=noopener"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://web.whatsapp.com/" target="_blank" rel="rel=noopener"><i class="fa fa-whatsapp"></i></a></li>
-                </ul>
-            </div>
+
+            <footer class="footer__container">
+
+
+            </footer>
         </div>
     </body>
 </html>
