--- a/index.html
+++ b/index.html
@@ -1,54 +1,113 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="O curriculo que vocÊ vai ver e se lembrar para sempre">
-    <meta name="keywords" content="Curriculo pessoal, Portfolio pessoal, Web developer">
-    <meta name="robots" content="index, follow">
-    <meta name="author" content="Antônio Alberto Correa Junior">
-    <title>@antonio - O curriculo on-line que você verá e não irá esquecer tão cedo!</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Roboto:400,900&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Pacote de icones em fontes-->
-    <link rel="icon" href="_images/icon.png"><!--<div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
-    <link rel="stylesheet" href="_css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="O curriculo que vocÊ vai ver e se lembrar para sempre">
+  <meta name="keywords" content="Curriculo pessoal, Portfolio pessoal, Web developer">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Antônio Alberto Correa Junior">
+  <title>@antonioal97 - Aprendiz de desenvolvedor, e amante de programação</title>
+  <link rel="stylesheet" href="_css/normalize.css">
+  <link rel="stylesheet" href="_css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Pacote de icones em fontes-->
+  <!--<link rel="icon" href="_images/icon.png"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
+ 
 </head>
-    <body>
-        <div class="wrapper"> <!--Essa é a div que alinha todo o conteúdo ao centro da página, servindo apenas para isso e contendo uma leve estilização!-->
-            <header class="cabecalho" role="banner"><!--Cabeçalho principal da página, leva consigo uma foto minha (3x4) menu de navegação e botão p/ envio de e-mail-->
-                <img src="/_images/avatar-img.svg" alt="Esta é a minha foto, apenas uma foto para apresentação!"><a href="index.html"></a></img><!--Esta é uma foto pessoal minha em tamanho reduzido, apenas para mostrar o "criador" do site-->
-                <nav class="cabecalho__mainmenu"><!--Menu de navegação da página, contém apenas links que referenciam a parte interna do site-->
-                    <ul><!--Itens do menu navegação-->
-                        <li><a href="index.html">Início</a></li>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Skills</a></li>
-                        <li><a href="#">Contato</a></li>
-                    </ul><!--Fim dos itens do menu de navegação-->
-                </nav><!--Fim do menu de navegação-->
-                <button class="send-msg">Envie-me um e-mail</button>
-            </header><!--Fim do cabeçalho principal da página-->
-            <div class="midias-sociais">
-                <ul>
-                    <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
-                    <li><a href="https://www.instagram.com/antonioal97/?hl=pt-br" target="_blank" rel="rel=noopener"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/ant%C3%B4nio-alberto-aa8501185/" target="_blank" rel="rel=noopener"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/antonioal97" target="_blank" rel="rel=noopener"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://web.whatsapp.com/" target="_blank" rel="rel=noopener"><i class="fa fa-whatsapp"></i></a></li>
-                </ul>
-            </div>
-            <main role="main">
-                <section>
-                    <div class="sobre">    
-                        <article>
-                            <h1>Where does it come from?
-                            </h1>
-                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-                            </p>
-                        </article>
-                    </div>
-                </section>
-            </main>
-        </div><!--Fim da div que alinha todo o conteúdo ao centro da página-->
-        </body>
-        </html>
+<body>
+  <header role="banner">
+    <nav>
+      <h1><a href="index.html">@antonioal97</a></h1>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="#services">Serviços</a></li>
+        <li><a href="#about">Sobre</a></li>
+        <li><a href="#contacts">Contato</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+      <input type="checkbox" id="navbar">
+      <label for="navbar">&#9776;</label>
+    </nav>
+    <div class="hero__elements">
+      <div class="hero__text">
+        <h1>Lorem Ipsum</h1>
+        <h5>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, 
+          consectetur, adipisci velit..."
+          "There is no one who loves pain itself, who seeks after it and wants to 
+          have it, simply because it is pain..."</h5>
+      </div>
+      <a href="#about" class="btn">Conheça!</a>
+      <div class="hero__panel">
+        
+      </div>
+    </div>
+    <div class="hero__links">
+      <ul>
+          <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
+          <li><a href="https://www.instagram.com/antonioal97/?hl=pt-br" target="_blank" rel="rel=noopener"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/ant%C3%B4nio-alberto-aa8501185/" target="_blank" rel="rel=noopener"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="https://github.com/antonioal97" target="_blank" rel="rel=noopener"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://web.whatsapp.com/" target="_blank" rel="rel=noopener"><i class="fa fa-whatsapp"></i></a></li>
+      </ul>
+  </div>
+  </header>
+  <div class="wrapper">
+    <section id="services" class="content">
+      <div class="service">
+        <h4>hardware</h4>
+        <img src="_img/hardware.png" alt="manutenção em hardwares gerais">
+        <p>is simply dummy text of the printing and typesetting industry.
+          Lorem Ipsum has been the industry's 
+          standard dummy text ever since the 1500s,</p>
+          <a href="#contact" class="btn">Contatar!</a>
+      </div>
+
+      <div class="service">
+        <h4>Desenvolvimento</h4>
+        <img src="_img/desenvolvimento.png" alt="Desenvolvimento de aplicativos e sites">
+        <p>is simply dummy text of the printing and typesetting industry.
+          Lorem Ipsum has been the industry's 
+          standard dummy text ever since the 1500s,</p>
+          <a href="#contact" class="btn">Contatar!</a>
+      </div>
+
+      <div class="service">
+        <h4>Redes</h4>
+        <img src="_img/hospedagem.png" alt="Serviços de rede no geral">
+        <p>is simply dummy text of the printing and typesetting industry.
+          Lorem Ipsum has been the industry's 
+          standard dummy text ever since the 1500s,</p>
+          <a href="#contact" class="btn">Contatar!</a>
+      </div>
+
+      <p>Agende hoje mesmo uma visita técnica</p>
+    </section>
+    <hr>
+    <section id="about" class="content">
+      <h2>Quem é Antônio Alberto?</h2>
+      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+        It has roots in a piece of classical Latin literature from 45 BC, 
+        making it over 2000 years old.</p>
+        <img src="_img/minhafoto.svg" alt="esta é uma foto minha">
+    </section>
+    <hr>
+    <section id="contacts" class="content">
+      <h2>Entre em contato através das redes sociais</h2>
+      <div class="contact">
+        <ul>
+            <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
+            <li><a href="https://www.instagram.com/antonioal97/?hl=pt-br" target="_blank" rel="rel=noopener"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/ant%C3%B4nio-alberto-aa8501185/" target="_blank" rel="rel=noopener"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/antonioal97" target="_blank" rel="rel=noopener"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://web.whatsapp.com/" target="_blank" rel="rel=noopener"><i class="fa fa-whatsapp"></i></a></li>
+        </ul>
+    </div>
+
+    </section>
+
+    <footer>
+      <p>Desenvolvido por Antônio Alberto</p>
+    </footer>
+  </div>
+</body>
