--- a/index.html
+++ b/index.html
@@ -8,94 +8,38 @@
   <meta name="keywords" content="Curriculo pessoal, Portfolio pessoal, Web developer">
   <meta name="robots" content="index, follow">
   <meta name="author" content="Antônio Alberto Correa Junior">
-  <title>@antonioal97 - Aprendiz de desenvolvedor, e amante de programação</title>
-  <link rel="stylesheet" href="_css/normalize.css">
-  <link rel="stylesheet" href="_css/style.css">
+  <title>@antonioal97 - Aprendendo e desenvolvendo cada dia mais o amor pela programação</title>
+  <link rel="stylesheet" href="_css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Pacote de icones em fontes-->
+  <link rel="shortcut icon" href="_img/favicon.png" type="image/x-icon">
   <!--<link rel="icon" href="_images/icon.png"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
- 
 </head>
 <body>
   <header role="banner">
-    <nav>
-      <h1><a href="index.html">@antonioal97</a></h1>
-      <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#services">Serviços</a></li>
-        <li><a href="#about">Sobre</a></li>
-        <li><a href="#contacts">Contato</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-      <input type="checkbox" id="navbar">
-      <label for="navbar">&#9776;</label>
-    </nav>
-    <div class="hero__elements">
-      <div class="hero__text">
-        <h1>Lorem Ipsum</h1>
-        <h5>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, 
-          consectetur, adipisci velit..."
-          "There is no one who loves pain itself, who seeks after it and wants to 
-          have it, simply because it is pain..."</h5>
-      </div>
-      <a href="#about" class="btn">Conheça!</a>
-      <div class="hero__panel">
-        
-      </div>
+    <div class="top-menu">
+      <a href="#"><h1>@al97</h1></a>
+      <input type="checkbox" id="btn-toggle">
+      <label for="btn-toggle" class="btn-hamburguer">
+        <span class="hamburguer"></span>
+      </label>
+  
+      <nav class="nav-menu">
+        <ul class="nav-list">
+          <li><a href="#" class="nav-link">Início</a></li>
+          <li><a href="#" class="nav-link">Sobre</a></li>
+          <li><a href="#" class="nav-link">Serviços</a></li>
+          <li><a href="#" class="nav-link">Portfolio</a></li>
+          <li><a href="#" class="nav-link">Contato</a></li>
+        </ul>
+      </nav>
     </div>
-    <div class="hero__links">
-      <ul>
-          <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
-          <li><a href="https://www.instagram.com/antonioal97/?hl=pt-br" target="_blank" rel="rel=noopener"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/ant%C3%B4nio-alberto-aa8501185/" target="_blank" rel="rel=noopener"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="https://github.com/antonioal97" target="_blank" rel="rel=noopener"><i class="fa fa-github"></i></a></li>
-          <li><a href="https://web.whatsapp.com/" target="_blank" rel="rel=noopener"><i class="fa fa-whatsapp"></i></a></li>
-      </ul>
-  </div>
-  </header>
-  <div class="wrapper">
-    <section id="services" class="content">
-      <div class="service">
-        <h4>hardware</h4>
-        <img src="_img/hardware.png" alt="manutenção em hardwares gerais">
-        <p>is simply dummy text of the printing and typesetting industry.
-          Lorem Ipsum has been the industry's 
-          standard dummy text ever since the 1500s,</p>
-          <a href="#contact" class="btn">Contatar!</a>
+    <div class="hero">
+      <div class="landing-text">
+        <h1>Antônio Alberto</h1>
+        <h6>Front-end developer | Musician</h6>
       </div>
-
-      <div class="service">
-        <h4>Desenvolvimento</h4>
-        <img src="_img/desenvolvimento.png" alt="Desenvolvimento de aplicativos e sites">
-        <p>is simply dummy text of the printing and typesetting industry.
-          Lorem Ipsum has been the industry's 
-          standard dummy text ever since the 1500s,</p>
-          <a href="#contact" class="btn">Contatar!</a>
-      </div>
-
-      <div class="service">
-        <h4>Redes</h4>
-        <img src="_img/hospedagem.png" alt="Serviços de rede no geral">
-        <p>is simply dummy text of the printing and typesetting industry.
-          Lorem Ipsum has been the industry's 
-          standard dummy text ever since the 1500s,</p>
-          <a href="#contact" class="btn">Contatar!</a>
-      </div>
-
-      <p>Agende hoje mesmo uma visita técnica</p>
-    </section>
-    <hr>
-    <section id="about" class="content">
-      <h2>Quem é Antônio Alberto?</h2>
-      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
-        It has roots in a piece of classical Latin literature from 45 BC, 
-        making it over 2000 years old.</p>
-        <img src="_img/minhafoto.svg" alt="esta é uma foto minha">
-    </section>
-    <hr>
-    <section id="contacts" class="content">
-      <h2>Entre em contato através das redes sociais</h2>
-      <div class="contact">
-        <ul>
+      <div class="social-media">
+        <ul class="nav-list">
             <li><a href="https://www.facebook.com/profile.php?id=100007562955556" target="_blank" rel="rel=noopener"><i class="fa fa-facebook-square"></i></a></li>
             <li><a href="https://www.instagram.com/antonioal97/?hl=pt-br" target="_blank" rel="rel=noopener"><i class="fa fa-instagram"></i></a></li>
             <li><a href="https://www.linkedin.com/in/ant%C3%B4nio-alberto-aa8501185/" target="_blank" rel="rel=noopener"><i class="fa fa-linkedin"></i></a></li>
@@ -103,11 +47,10 @@
             <li><a href="https://web.whatsapp.com/" target="_blank" rel="rel=noopener"><i class="fa fa-whatsapp"></i></a></li>
         </ul>
     </div>
+      
+    </div>
+  </header>
 
-    </section>
-
-    <footer>
-      <p>Desenvolvido por Antônio Alberto</p>
-    </footer>
-  </div>
+  
 </body>
+</html>
