--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@ us"></script>
                 </li>
             </ul>
         </nav>
+        <hr class="divider">
     </header>
     <!--  -->
-    <main class="wrapper">
+    <main>
         <section class="home" id="home">
             <article>
                 <div class="content">
@@ -72,7 +73,7 @@ us"></script>
         <hr class="divider">
 
         <section class="about" id="about">
-            <article>
+            <article class="wrapper">
                 <div class="gallery">
                     <img src="https://source.unsplash.com/random/225x300" alt="" srcset="" class="gallery__item">
                     <img src="https://source.unsplash.com/random/225x300" alt="" srcset="" class="gallery__item">
@@ -113,7 +114,7 @@ us"></script>
         <hr class="divider">
 
         <section class="services" id="services">
-            <article>
+            <article class="wrapper">
                     <header class="headline">
                         <h2 class="subtitle">Sou desenvolvedor Front End, UI Designer e muito mais!</h2>
                         <h1 class="title">Estas são minhas especialidades no mundo da tecnologia</h1>
@@ -175,18 +176,18 @@ us"></script>
 
     <footer class="wrapper">
         <div>
-            <h2 class="title">Antônio Alberto</h2>
+            <h2 class="subtitle">Antônio Alberto</h2>
             <p class="paragraph">Desenvolvido com carinho por mim mesmo!</p>
         </div>
         <div>
-            <p class="title">Hello world</p>
+            <p class="subtitle">Hello world</p>
             <p class="paragraph">Você pode me enviar uma mensagem também</p>
             <input type="text" name="" id="footer-message" class="message"><input type="button" value="Enviar">Enviar</input>
 
         </div>
         <div>
             <span>
-                <p class="title">Links úteis</p>
+                <p class="subtitle">Links úteis</p>
                 <i class="fab fas-link"></i>
             </span>
             <ul class="social">
