--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Antõnio Alberto | Desenvolvedor front end & UI Designer</title>
     <link rel="stylesheet" href="./assets/style/scss/style.css" />
     <script src="https://kit.fontawesome.com/744674e787.js" crossorigin="anonymous"></script>
-    
-  </head>
+</head>
   <body>
     <header class="l-header c-wrapper">
       <nav class="c-menu typ-body">
@@ -82,6 +81,38 @@
                 <p class="typ-body">Uma visão diferente que busca apresentar o máximo com o mínimo</p>
             </li>
         </ul>
+    </section>
+    <hr class="c-divider">
+    <section class="l-about" id="about">
+      <article class="c-wrapper">
+        <div>
+          <div class="c-card">
+            <div data="dev" class="c-card__content">
+              <p class="typ-subtitle">Front-end developer</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam. Repellendus, atque! Animi itaque nostrum, voluptas aperiam facere debitis?</p>
+            </div>
+          </div>
+          <div class="c-card">
+            <div data="design" class="c-card__content">
+              <p class="typ-subtitle">UI Design</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam. Repellendus, atque! Animi itaque nostrum, voluptas aperiam facere debitis?</p>
+            </div>
+          </div>
+          <div class="c-card">
+            <div data="dmm" class="c-card__content">
+              <p class="typ-subtitle">Digital Marketing Media</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam. Repellendus, atque! Animi itaque nostrum, voluptas aperiam facere debitis?</p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <header class="h1 typ-title">Um pouco do que sou e faço está aqui.</header>
+          <div class="c-cta">
+            <a href="#contact" class="c-button typ-button clr-primary">entrar em contato</a>
+            <a href="#about" class="c-button--as-link typ-button--as-link">Mais informações <i class="fas fa-info-circle"></i></a>
+          </div>
+        </div>
+      </article>
     </section>
     <script src="./assets/script.js"></script>
   </body>
