--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <hr class="c-divider">
     <section class="l-hero c-wrapper" id="home">
         <p class="typ-body">👋 Antônio Alberto</p>
-        <h1 class="typ-title typ-separator--after">
+        <h1 class="typ-title">
             UI Design
             <span class="typ-subtitle">&</span><br>
             Front-end Dev 
@@ -73,7 +73,7 @@
             <li class="skill">
                 <i class="skill__icon fas fa-terminal"></i>
                 <h3 class="typ-subtitle">Front-end Dev</h3>
-                <p class="typ-body">Desenvolvimento de Web Sites personalizados ou não</p>
+                <p class="typ-body">Desenvolvimento de Web Sites personalizados de acordo com seu gosto</p>
             </li>
             <li class="skill">
                 <i class="skill__icon fas fa-search"></i>
@@ -86,22 +86,24 @@
     <section class="l-about" id="about">
       <article class="c-wrapper">
         <div>
-          <div class="c-card">
+
+          <div class="c-card clr-dev--card">
             <div data="dev" class="c-card__content">
               <p class="typ-subtitle">Front-end developer</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam. Repellendus, atque! Animi itaque nostrum, voluptas aperiam facere debitis?</p>
+              <p class="typ-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam.</p>
             </div>
           </div>
-          <div class="c-card ">
+          
+          <div class="c-card clr-primary--card">
             <div data="design" class="c-card__content">
               <p class="typ-subtitle">UI Design</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam. Repellendus, atque! Animi itaque nostrum, voluptas aperiam facere debitis?</p>
+              <p class="typ-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam.</p>
             </div>
           </div>
-          <div class="c-card">
+          <div class="c-card clr-DMM--card">
             <div data="dmm" class="c-card__content">
               <p class="typ-subtitle">Digital Marketing Media</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam. Repellendus, atque! Animi itaque nostrum, voluptas aperiam facere debitis?</p>
+              <p class="typ-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aut incidunt distinctio hic voluptatem, libero ipsa, quia nisi inventore quo laboriosam.</p>
             </div>
           </div>
         </div>
@@ -111,6 +113,19 @@
             <a href="#contact" class=" c-button typ-button clr-primary">entrar em contato</a>
             <a href="#about" class="c-button--as-link typ-button--as-link">Mais informações <i class="fas fa-info-circle"></i></a>
           </div>
+        </div>
+      </article>
+    </section>
+    <hr class="c-divider">
+    <section class="l-newsproject" id="newsproject">
+      <article class="c-wrapper">
+        <div class="c-card">
+          <img src="https://source.unsplash.com/random" alt="" class="c-card__img">
+          <div class="c-card__content">
+            <h2 class="c-typ-subtitle">Card 1</h2>
+            <p class="typ-body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore rerum iure saepe deleniti iusto numquam ducimus</p>
+          </div>
+          <a href="" class="button--as-link">Veja mais</a>
         </div>
       </article>
     </section>
