Secao services criada

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div>
-          <header class="h1 typ-title">Um pouco do que sou e faço está aqui.</header>
+          <h1 class="h1 typ-title">Um pouco do que sou e faço está aqui.</h1>
           <div class="c-cta">
             <a href="#contact" class=" c-button typ-button clr-primary">entrar em contato</a>
             <a href="#about" class="c-button--as-link typ-button--as-link">Mais informações <i class="fas fa-info-circle"></i></a>
@@ -117,7 +117,7 @@
       </article>
     </section>
     <hr class="c-divider">
-    <section class="l-newsproject" id="newsproject">
+    <!-- <section class="l-newsproject" id="newsproject">
       <article class="c-wrapper">
         <div class="c-card">
           <img src="https://source.unsplash.com/random" alt="" class="c-card__img">
@@ -126,6 +126,56 @@
             <p class="typ-body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore rerum iure saepe deleniti iusto numquam ducimus</p>
           </div>
           <a href="" class="button--as-link">Veja mais</a>
+        </div>
+      </article>
+    </section> -->
+    <section class="l-services" id="services">
+      <article class="c-wrapper">
+        <header>
+          <h1 class="h1 typ-title">Esta é uma lista dos serviços que ofereço.</h1>
+          <p class="typ-body">Com toda certeza você já precisou (ou precisa) de algum destes e não encontrou alguém para auxiliá-lo. Agora você sabe com quem contar!</p>
+        </header>
+        <div class="c-service-list">
+          <div class="c-card clr-dev--card">
+            <div class="c-card__content">
+              <h2 class="typ-subtitle">Desenvolvimento Front-end</h2>
+              <ul class="c-list">
+                <li class="c-list__item typ-body">Criação de websites institucionais</li>
+                <li class="c-list__item typ-body">Criação de websites estáticos</li>
+              </ul>
+              <div class="c-cta">
+                <a href="#" class="c-button typ-button clr-primary">contratar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="c-card clr-DMM--card">
+            <div class="c-card__content">
+              <h2 class="typ-subtitle">Digital Marketing Media</h2>
+              <ul class="c-list">
+                <li class="c-list__item typ-body">Banners digitais.</li>
+                <li class="c-list__item typ-body">Banners fícos.</li>
+                <li class="c-list__item typ-body">Artes para publicação.</li>
+                <li class="c-list__item typ-body">Cartões de visita (físico ou digital).</li>
+              </ul>
+              <div class="c-cta">
+                <a href="#" class="c-button typ-button clr-primary">contratar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="c-card clr-primary--card">
+            <div class="c-card__content">
+              <h2 class="typ-subtitle">UI Design</h2>
+              <ul class="c-list">
+                <li class="c-list__item typ-body">Prototipação de websites personalizados.</li>
+                <li class="c-list__item typ-body">Criação de identidade virtual para empresas.</li>
+              </ul>
+              <div class="c-cta">
+                <a href="#" class="c-button typ-button clr-primary">contratar</a>
+              </div>
+            </div>
+          </div>
         </div>
       </article>
     </section>
