js e classes para manipulação via script

--- a/index.html
+++ b/index.html
@@ -39,42 +39,47 @@
             contato
           </p>
           <a href="https://instagram.com/antonioal97" class=" c-font c-button c-button--primary" target="_blank" rel="noopener noreferrer">Contato</a>
-          <ul class="c-font c-social">
-            <li>
-              <a
-                href="https://www.facebook.com/antonioal97"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Facebook</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://instagram.com/antonioal97"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Instagram</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/antonioal97/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Linkedin</a
-              >
-            </li>
-            <li>
-              <a
-                href="https://github.com/antonioal97"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Github</a
-              >
-            </li>
-          </ul>
+          <div class="c-sidebar">
+            <a class="c-font c-button js-close">Fechar</a>
+            <ul class="c-font c-social">
+              <li>
+                <a class="c-button"
+                  href="https://www.facebook.com/antonioal97"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <a class="c-button"
+                  href="https://instagram.com/antonioal97"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a class="c-button"
+                  href="https://www.linkedin.com/in/antonioal97/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Linkedin</a
+                >
+              </li>
+              <li>
+                <a class="c-button"
+                  href="https://github.com/antonioal97"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Github</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
+
+    <script src="./src/js/sidebar.js"></script>
   </body>
 </html>
