Testing github workspaces i'm create a test to use github workspace

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       </div>
     </header>
 
+    <main>
+      <h1>I'm created a github workspace</h1>
+    </main>
+
     <script src="./src/js/sidebar.js"></script>
   </body>
 </html>
